FIX gap not working mobile

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -171,7 +171,6 @@ body {
         margin-bottom: 1rem;
 
         .header-gen {
-          gap: 0;
           .photo {
             img {
               height: 8vh;
